mobile spacing issue

--- a/src/components/Landing.css
+++ b/src/components/Landing.css
@@ -49,6 +49,7 @@
     /* margin: 10px 217px; */
     padding-top: 5%;
     /* padding-bottom: 5%; */
+    margin-top: 3%;
 }
 
   .mobile-landing-box-content p {
